add request to api in slackbot, engine done

--- a/slackbot/Dockerfile
+++ b/slackbot/Dockerfile
@@ -2,10 +2,12 @@ FROM    python:3.7.0
 
 ARG     SLACK_SIGNING_SECRET
 ARG     SLACK_BOT_TOKEN
+ARG     STACKY_API_ADDRESS
 
 ENV     SLACK_APP_PORT=3000
 ENV     SLACK_SIGNING_SECRET=$SLACK_SIGNING_SECRET
 ENV     SLACK_BOT_TOKEN=$SLACK_BOT_TOKEN
+ENV     STACKY_API_ADDRESS=$STACKY_API_ADDRESS
 
 COPY    app.py /
 COPY    requirements.txt /
